# AdeClangFormat

./: .gitignore  AdeClangFormatConfig.cmake.in  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.github/workflows/: ci.yml
doc/: git-clang-format.md  rationale.md
test/: CMakeLists.txt
